refactor: update CORS configuration to allow only POST requests